__HEADER__(`Octave News Archive')

<div class="section">
<dl>
<dt>August 1, 2010</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp (3.3.52).  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>March 24, 2010</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp (3.3.51).  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>March 24, 2010</dt>
<dd>We are now using the __HTTP__(`bugs.octave.org', `a bug tracker')
to manage bug reports instead of the bug@octave.org mailing
list.  For now, the list will continue to function, but you are
strongly encouraged to use the tracker instead.</dd>
<dt>January 28, 2010</dt>
<dd>Version 3.2.4 has been released and is now available for ftp.
Octave 3.2.4 is a bug-fixing release
__OCTAVE_HTTP__(`NEWS-3.2.html', `NEWS') file for a list of
user-visible changes in the 3.2.x series.</dd>
<dt>September 21, 2009</dt>
<dd>Version 3.2.3 has been released and is now available for ftp.
Octave 3.2.3 is a bug-fixing release
__OCTAVE_HTTP__(`NEWS-3.2.html', `NEWS') file for a list of
user-visible changes in the 3.2.x series.</dd>
<dt>September 12, 2009</dt>
<dd>A new snapshot of the current development version of Octave is
available for ftp (3.3.50).  You should only be using this version if you are
interested in testing the latest features and don't mind hitting the
occasional bug.</dd>
<dt>July 22, 2009</dt>
<dd>Version 3.2.2 has been released and is now available for ftp.
Octave 3.2.2 is a bug-fixing release
__OCTAVE_HTTP__(`NEWS-3.2.html', `NEWS') file for a list of
user-visible changes in the 3.2.x series.</dd>
<dt>June 6, 2009</dt>
<dd>Version 3.2.0 has been released and is now available for ftp.
Octave 3.2.0 is a major new release.  See the