@@ -74,11 +74,11 @@ instead (see below for details).
 <td class="download">28 January 2010</td></tr>
 <tr><td class="download">
 <a href="ftp://ftp.octave.org/pub/octave/bleeding-edge">Testing</a></td>
-<td class="download">3.3.52
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-3.3.52.tar.gz">.tar.gz</a>)
-    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-3.3.52.tar.bz2">.tar.bz2</a>)
+<td class="download">3.3.53
+    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-3.3.53.tar.gz">.tar.gz</a>)
+    (<a href="ftp://ftp.octave.org/pub/octave/bleeding-edge/octave-3.3.53.tar.bz2">.tar.bz2</a>)
 </td>
-<td class="download">1 Aug 2010</td></tr>
+<td class="download">19 Oct 2010</td></tr>
 </table>
 </div>
 
