@@ -17,6 +17,11 @@ __OCTAVE_HTTP__(`about.html', `about Octave').</p></div>
 __TITLE_BAR__(`Current News')
 
 <dl>
+<dt>October 19, 2010</dt>
+<dd>A new snapshot of the current development version of Octave is
+available for ftp (3.3.53).  You should only be using this version if you are
+interested in testing the latest features and don't mind hitting the
+occasional bug.</dd>
 <dt>August 1, 2010</dt>
 <dd>A new snapshot of the current development version of Octave is
 available for ftp (3.3.52).  You should only be using this version if you are
